got the contact correctly aligned

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -115,7 +115,7 @@ a:active {
   justify-content: space-between;
   padding: 10px;
   margin: 10%;
-  margin-bottom: 0px;
+  margin-bottom: 100px;
 }
 
 h3 {
@@ -172,7 +172,8 @@ h3 {
 }
 
 .sizing{
-  padding: 50px px 100px 300px;
+  margin: -100px 100px 100px 80px;
+  padding: 50px 100px 20px 30px;
 }
 @media screen and (max-width: 1800px) {
   h2 {
